syntax = "proto3";

import "messaging.proto";

message V1ClientAuthnRequest {
  bytes identityKeyBytes = 1;
  Signature walletSignature = 2;
  bytes authnDataBytes = 3;
  Signature authnSignature = 4;
}

message ClientAuthnRequest {
  oneof version {
    V1ClientAuthnRequest v1 = 1;
  }
}

message V1ClientAuthnResponse {
  bool authnSuccessful = 1;
  string errorStr = 2;
}

message ClientAuthnResponse{
  oneof version {
    V1ClientAuthnResponse v1 = 1;
  }
}

message AuthnData {
  string walletAddr = 1;
  string peerId = 2;
  uint64 timestamp = 3;
}
